--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_bWFueS1yb2RlbnQtNjUuY2xlcmsuYWNjb3VudHMuZGV2JA
-VITE_BASE_URL=https://my-ai-backend-yq0o.onrender.com
+VITE_BASE_URL='http://localhost:3000'
